include/sphinxbase/logmath.h

/**
 * Integer log math computation class.
 */
typedef struct logmath_s logmath_t;
/**
 * Initialize a log math computation table.
 * @param base The base B in which computation is to be done.
 * @param shift Log values are shifted right by this many bits.
 * @param use_table Whether to use an add table or not
 * @return The newly created log math table.
 */
SPHINXBASE_EXPORT
logmath_t *logmath_init(float64 base, int shift, int use_table);
/**
 * Get the smallest possible value represented in this base.
 */
SPHINXBASE_EXPORT
int logmath_get_zero(logmath_t const *lmath);
/**
 * Free a log table.
 *
 * @return new reference count (0 if freed completely)
 */
SPHINXBASE_EXPORT
int logmath_free(logmath_t *lmath);
/**
 * Add two values in log space (i.e. return log(exp(p)+exp(q)))
 */
SPHINXBASE_EXPORT
int logmath_add(logmath_t const *lmath, int logb_p, int logb_q);
/**
 * Convert linear floating point number to integer log in base B.
 */
SPHINXBASE_EXPORT
int logmath_log(logmath_t const *lmath, float64 p);
/**
 * Convert integer log in base B to linear floating point.
 */
SPHINXBASE_EXPORT
float64 logmath_exp(logmath_t const *lmath, int logb_p);
/**
 * Convert natural log (in floating point) to integer log in base B.
 */
SPHINXBASE_EXPORT
int logmath_ln_to_log(logmath_t const *lmath, float64 log_p);
/**
 * Convert integer log in base B to natural log (in floating point).
 */
SPHINXBASE_EXPORT
float64 logmath_log_to_ln(logmath_t const *lmath, int logb_p);
/**
 * Convert base 10 log (in floating point) to integer log in base B.
 */
SPHINXBASE_EXPORT
int logmath_log10_to_log(logmath_t const *lmath, float64 log_p);
/**
 * Convert integer log in base B to base 10 log (in floating point).
 */
SPHINXBASE_EXPORT
float64 logmath_log_to_log10(logmath_t const *lmath, int logb_p);